<resources>
    <string name="app_name">My Planner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="today">Today</string>
    <string name="user">User</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="your_work">Your work</string>
    <string name="description">Description:</string>
    <string name="repeat">Repeat:</string>
    <string name="repeat_until">Repeat until:</string>
    <string name="new_work">New work</string>
    <string name="notification">Notification:</string>
    <string name="ok">Ok</string>
    <string name="set_date_end_to_next_day">The end date is set to the next day.</string>
    <string name="no_repeat">No repeat</string>
    <string name="every_day">Every day</string>
    <string name="every_week">Every week</string>
    <string name="every_month">Every month</string>
    <string name="every_year">Every year</string>
    <string name="custom">Custom</string>
    <string name="at_time">At time</string>
    <string name="before_5_minutes">Before 5 minutes</string>
    <string name="before_15_minutes">Before 15 minutes</string>
    <string name="before_30_minutes">Before 30 minutes</string>
    <string name="day">Day</string>
    <string name="no_end_date">There is no end date</string>
    <string name="end_date_setting">End date setting</string>
    <string name="time_setting">Time setting</string>
    <string name="times">times</string>
    <string name="repeat_until_1">Repeat until</string>
    <string name="work">(Work)</string>
    <string name="save_successfully">Save successfully</string>
    <string name="name_work_empty">Work title cannot be empty.</string>
    <string name="agree">Agree</string>
    <string name="want_to_delete_work">Are you sure you want to delete this work?</string>
    <string name="no_notification">No notification</string>
    <string name="detail">See details</string>
    <string name="calendar">Calendar:</string>
    <string name="deleted_work">Deleted work</string>
    <string name="repair_work">Repair work</string>
    <string name="repeair_successfully">Repair successfully</string>
    <string name="completed">Work completed</string>
    <string name="work_completed">Work completed on</string>
    <string name="details">Details</string>
    <string name="work_notification">Work notification</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="have_no_work">Have no work, click to add!</string>
    <string name="choose_file">Choose one file</string>
    <string name="rate">Rate</string>
    <string name="settings">Settings</string>
    <string name="notification_settings">Change notification settings</string>
    <string name="language">Language</string>
    <string name="select_language">Select the language for the application</string>
    <string name="events_from_gmail">Events from gmail</string>
    <string name="choose_language">Choose language</string>
    <string name="vietnamese">Tiếng Việt</string>
    <string name="english">English</string>
    <string name="close">Close</string>
    <string name="have_no_work_2">Have no work</string>
    <string name="add_work">Add work</string>
    <string name="list">List</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="share">Share</string>
    <string name="export_data">Export</string>
    <string name="import_data">Import</string>
    <string name="sync_data">Sync</string>
    <string name="save_file_successfully">Save file data successfully</string>
    <string name="save_file_failed">Save file data failed</string>
    <string name="have_no_data">Have no data</string>
    <string name="data_synced">Data synced</string>
    <string name="permission_to_sync">Allow permission to sync data files</string>
    <string name="permission_to_save">Allow permission to save data files</string>
    <string name="show_events_from_gmail">Show events from Gmail</string>
    <string name="notification_work">Notification work.</string>
    <string name="running_notification">Running notification</string>
    <string name="notification_application_running">Application is running</string>
    <string name="application_is_running">Application is running</string>
    <string name="click_for_more_details">Click for more details.</string>
    <string name="file_does_not_match">File does not match</string>
    <string name="backup_to_cloud">Backup to cloud</string>
    <string name="restore_from_cloud">Restore from cloud</string>
    <string name="log_out">Log out:</string>
    <string name="log_in_fail">Log in fail</string>
    <string name="log_in_success">Log in success</string>
    <string name="log_out_success">Log out success</string>
    <string name="chart">Chart</string>
    <string name="complete">Complete</string>
    <string name="incomplete">Incomplete</string>
    <string name="total">Total</string>
    <string name="have_no_description">Have no description</string>
    <string name="please_wait">Please wait...</string>
</resources>