<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_4sdp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/background_bottom_sheet"
        android:orientation="vertical"
        android:padding="@dimen/_4sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16sdp"
            android:text="@string/repeat_until"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radNoEndDate"
                android:layout_width="@dimen/_260sdp"
                android:layout_height="wrap_content"
                android:text="@string/no_end_date"
                android:textSize="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_10sdp"/>

            <RadioButton
                android:id="@+id/radEndDateSetting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/end_date_setting"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/txtDateEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/background_select_time"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingTop="@dimen/_2sdp"
                android:paddingRight="@dimen/_10sdp"
                android:paddingBottom="@dimen/_2sdp"
                android:text="17/02/2022"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:visibility="gone" />

            <RadioButton
                android:id="@+id/radTimeSetting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time_setting"
                android:textSize="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_10sdp"/>

            <LinearLayout
                android:id="@+id/layoutTimeSetting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:visibility="gone">

                <EditText
                    android:id="@+id/edtTimeSetting"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="number" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_6sdp"
                    android:text="@string/times"
                    android:textColor="@color/black" />
            </LinearLayout>
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtCancel"
                android:layout_width="0dp"
                android:layout_height="@dimen/_36sdp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/orange1"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtOk"
                android:layout_width="0dp"
                android:layout_height="@dimen/_36sdp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/ok"
                android:textColor="@color/orange1"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>