<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="@dimen/_180sdp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/background_dialog"
        android:padding="@dimen/_4sdp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_language"
            android:textSize="@dimen/_14sdp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"/>
        <LinearLayout
            android:id="@+id/layoutLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_4sdp"
                    android:text="@string/vietnamese" />

                <RadioButton
                    android:id="@+id/radVietnamese"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    android:layoutDirection="rtl"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_4sdp"
                    android:text="@string/english"/>
                <RadioButton
                    android:id="@+id/radEnglish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    android:layoutDirection="rtl"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/txtClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close"
            android:textSize="@dimen/_12sdp"
            android:layout_gravity="end"
            android:layout_marginRight="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            android:textColor="@color/orange1"/>
    </LinearLayout>

</LinearLayout>