<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/background_bottom_sheet"
        android:padding="@dimen/_6sdp"
        android:layout_marginBottom="@dimen/_12sdp">

        <TextView
            android:id="@+id/txtDelete"
            android:layout_width="@dimen/_160sdp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_12sdp"
            android:gravity="center"
            android:text="@string/want_to_delete_work"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />
        <LinearLayout
            android:layout_width="@dimen/_220sdp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/txtDelete"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_centerHorizontal="true">
            <TextView
                android:id="@+id/txtCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:gravity="center"
                android:textColor="@color/orange1"
                android:textStyle="bold"
                android:textSize="@dimen/_12sdp"
                android:padding="@dimen/_6sdp"/>
            <TextView
                android:id="@+id/txtAgree"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/agree"
                android:gravity="center"
                android:textColor="@color/orange1"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                android:padding="@dimen/_6sdp"/>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>