<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EventActivity"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_6sdp"
        android:background="@color/gray1">
        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_back"
            app:tint="@color/orange1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_4sdp"
            android:layout_toRightOf="@+id/imgBack"
            android:text="@string/detail"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />
        <ImageView
            android:id="@+id/imgDelete"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_delete"
            android:layout_alignParentRight="true"
            app:tint="@color/orange1"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/_6sdp"/>
        <ImageView
            android:id="@+id/imgRepair"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_repair"
            app:tint="@color/orange1"
            android:layout_toLeftOf="@id/imgDelete"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/_12sdp"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_4sdp"
        android:background="@color/green1">
        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/teal_700"
            android:textSize="@dimen/_12sdp"
            android:text="Valentine's day"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/txtDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_10sdp"
            android:text="14 thang 2 nam 2022"
            android:textColor="@color/teal_700"/>
    </LinearLayout>
    <TextView
        android:id="@+id/txtDisplayName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user"
        android:paddingLeft="@dimen/_4sdp"
        android:background="@color/teal_700"
        android:textColor="@color/white"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:padding="@dimen/_4sdp"
        android:background="@color/gray1"/>
    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_12sdp"
        android:padding="@dimen/_4sdp"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notification"
        android:padding="@dimen/_4sdp"
        android:background="@color/gray1"/>
    <TextView
        android:id="@+id/txtNotification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_12sdp"
        android:padding="@dimen/_4sdp"
        android:textColor="@color/black"/>
    <RelativeLayout
        android:id="@+id/layoutCompleted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/_4sdp"
        android:background="@color/gray1">
        <ImageView
            android:id="@+id/imgUncompleted"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_test"
            app:tint="@color/gray3"/>
        <ImageView
            android:id="@+id/imgCompleted"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_completed"
            app:tint="@color/green2"
            android:background="@drawable/background_icon_completed"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/txtCompleted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_28sdp"
            android:text="@string/completed"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp" />
    </RelativeLayout>
</LinearLayout>